third_party/WebKit/Source/core/editing/commands/InsertTextCommandTest.cpp
@@ -32,4 +32,75 @@ TEST_F(InsertTextCommandTest, WithTypingStyle) {
          "without applying typing style.";
 }
 
+// http://crbug.com/741826
+TEST_F(InsertTextCommandTest, InsertChar) {
+  Selection().SetSelection(
+      SetSelectionTextToBody("<p contenteditable><span>\ta|c</span></p>"));
+  GetDocument().execCommand("insertText", false, "B", ASSERT_NO_EXCEPTION);
+  EXPECT_EQ("<p contenteditable><span>\taB|c</span></p>",
+            GetSelectionTextFromBody(Selection().GetSelectionInDOMTree()))
+      << "We should not split Text node";
+}
+
+// http://crbug.com/741826
+TEST_F(InsertTextCommandTest, InsertCharToWhiteSpacePre) {
+  Selection().SetSelection(SetSelectionTextToBody(
+      "<p contenteditable><span style='white-space:pre'>\ta|c</span></p>"));
+  GetDocument().execCommand("insertText", false, "B", ASSERT_NO_EXCEPTION);
+  EXPECT_EQ(
+      "<p contenteditable>"
+      "<span style=\"white-space:pre\">\ta</span>"
+      "B|"
+      "<span style=\"white-space:pre\">c</span>"
+      "</p>",
+      GetSelectionTextFromBody(Selection().GetSelectionInDOMTree()))
+      << "This is a just record current behavior. We should not split SPAN.";
+}
+
+// http://crbug.com/741826
+TEST_F(InsertTextCommandTest, InsertSpace) {
+  Selection().SetSelection(
+      SetSelectionTextToBody("<p contenteditable><span>\ta|c</span></p>"));
+  GetDocument().execCommand("insertText", false, "  ", ASSERT_NO_EXCEPTION);
+  EXPECT_EQ("<p contenteditable><span>\ta\xC2\xA0 |c</span></p>",
+            GetSelectionTextFromBody(Selection().GetSelectionInDOMTree()))
+      << "We should insert U+0020 without splitting SPAN";
+}
+
+// http://crbug.com/741826
+TEST_F(InsertTextCommandTest, InsertSpaceToWhiteSpacePre) {
+  Selection().SetSelection(SetSelectionTextToBody(
+      "<p contenteditable><span style='white-space:pre'>\ta|c</span></p>"));
+  GetDocument().execCommand("insertText", false, "  ", ASSERT_NO_EXCEPTION);
+  EXPECT_EQ(
+      "<p contenteditable>"
+      "<span style=\"white-space:pre\">\ta</span>"
+      "\xC2\xA0\xC2\xA0|"
+      "<span style=\"white-space:pre\">c</span></p>",
+      GetSelectionTextFromBody(Selection().GetSelectionInDOMTree()))
+      << "We should insert U+0020 without splitting SPAN";
+}
+
+// http://crbug.com/741826
+TEST_F(InsertTextCommandTest, InsertTab) {
+  Selection().SetSelection(
+      SetSelectionTextToBody("<p contenteditable><span>\ta|c</span></p>"));
+  GetDocument().execCommand("insertText", false, "\t", ASSERT_NO_EXCEPTION);
+  EXPECT_EQ(
+      "<p contenteditable>"
+      "<span>\ta<span style=\"white-space:pre\">\t|</span>c</span>"
+      "</p>",
+      GetSelectionTextFromBody(Selection().GetSelectionInDOMTree()));
+}
+
+// http://crbug.com/741826
+TEST_F(InsertTextCommandTest, InsertTabToWhiteSpacePre) {
+  Selection().SetSelection(SetSelectionTextToBody(
+      "<p contenteditable><span style='white-space:pre'>\ta|c</span></p>"));
+  GetDocument().execCommand("insertText", false, "\t", ASSERT_NO_EXCEPTION);
+  EXPECT_EQ(
+      "<p contenteditable><span style=\"white-space:pre\">\ta\t|c</span></p>",
+      GetSelectionTextFromBody(Selection().GetSelectionInDOMTree()));
+}
+
 }  // namespace blink
